# todo-django

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
project/: settings.py  urls.py
static/css/: styles.css
static/js/: scripts.js
templates/global/: base.html
templates/global/partials/: footer.html  head.html  header.html  messages.html
todo/: admin.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_title.py
todo/templates/todo/pages/: home.html  todo_view.html  trash.html
todo/templates/todo/partials/: add_todo.html  head.html  pagination.html  todo_table.html  trash_table.html
todo/tests/: test_todo.py  test_todo_base.py  test_todo_endpoints.py  test_todo_model.py  test_todo_views.py
users/: form.py  urls.py  views.py
users/forms/: login.py  register_form.py
users/templates/users/pages/: login.html  register.html
users/tests/: test_user_register_form.py  test_users_base.py  test_users_endpoints.py  test_users_register_form.py  test_users_views.py
